[update] ps2par周りの表示を変更

--- a/css/css.css
+++ b/css/css.css
@@ -103,7 +103,7 @@ article p{
     line-height: 150%;
     margin-bottom: 10px;
     padding-left: 10px;
-    float: left;
+    /* float: left; */
 }
 /****** profile ******/
 #prof {
