--- a/css/calendar-heatmap.css
+++ b/css/calendar-heatmap.css
@@ -10,12 +10,14 @@ rect.day-cell:hover {
   stroke-width: 1px;
 }
 .day-cell-tooltip {
+  width: 230px;
+  display: inline-block;
   position: absolute;
-  z-index: 9999;
-  padding: 5px 9px;
+  padding: 5px 10px;
+  margin-top: -30px;
   color: #fcfcfc;
   font-size: 12px;
-  background: rgba(0, 0, 0, 0.65);
+  background: rgba(0, 0, 0, 0.274);
   border-radius: 10px;
   text-align: center;
 }
